<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityInGame">

    <Button
        android:id="@+id/buttonBljr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="36dp"
        android:text="@string/belajar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.897" />

    <ImageView
        android:id="@+id/baground_innerGame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_launcher_background" />

    <ImageView
        android:id="@+id/character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.227"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@color/material_dynamic_neutral80"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/layoutTidur"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:background="@color/material_dynamic_neutral80"
                android:gravity="center"
                android:text="@string/tidur" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonTidur"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="buttonTidur"

                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icon_tidur"
                    tools:ignore="TouchTargetSizeCheck" />

                <ProgressBar
                    android:id="@+id/barTidur"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:max="100"
                    android:min="0"
                    android:progress="50" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMakan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"

                android:layout_width="80dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/material_dynamic_neutral80"
                android:gravity="center"
                android:text="@string/makan" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonMakan"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="@string/buttonmakan"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icon_makan"
                    tools:ignore="HardcodedText" />

                <ProgressBar
                    android:id="@+id/barMakan"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:max="100"
                    android:min="0"
                    android:progress="50" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutSenang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="80dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:background="@color/material_dynamic_neutral80"
                android:gravity="center"
                android:text="@string/senang"
                tools:ignore="TextSizeCheck" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/buttonMain"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:contentDescription="buttonMain"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/icon_game"
                    tools:ignore="TouchTargetSizeCheck" />

                <ProgressBar
                    android:id="@+id/barMain"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="10"
                    android:max="100"
                    android:min="0"
                    android:progress="50" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/semester"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/material_dynamic_neutral80"
        android:gravity="center"
        android:text="Semester 1"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/character"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/material_dynamic_neutral80"
        app:layout_constraintBottom_toBottomOf="@+id/baground_innerGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character"
        app:layout_constraintVertical_bias="0.59">

        <TextView
            android:id="@+id/name"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@color/material_dynamic_neutral80"
            android:gravity="center"
            android:text="Name"
            tools:ignore="HardcodedText" />

        <ProgressBar
            android:id="@+id/barBelajar"
            android:max="100"
            android:progress="0"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="234dp"
            android:layout_height="39dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:background="@color/material_dynamic_neutral80"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/material_dynamic_neutral80"
            android:gravity="center"
            android:text="Jam "
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/jam"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@color/material_dynamic_neutral80"
            android:gravity="center"
            android:text="12 : 00 : 00" />
    </LinearLayout>

    <View
        android:id="@+id/viewPopUp"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#80000000"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="240dp"
        tools:layout_editor_absoluteY="132dp" />

    <ImageButton
        android:id="@+id/buttonRule"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="peraturan"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toEndOf="@+id/imageButtonInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_input_get"
        tools:ignore="ImageContrastCheck" />

    <ImageButton
        android:id="@+id/imageButtonInfo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:color/transparent"
        android:contentDescription="info"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</androidx.constraintlayout.widget.ConstraintLayout>